[gd_scene load_steps=3 format=3]

[ext_resource type="Theme" path="res://ui/MainMenuTheme.tres" id="1_theme"]
[ext_resource type="Script" path="res://ui/LoadingScreen.gd" id="2_script"]

[node name="LoadingScreen" type="CanvasLayer"]
layer = 100
script = ExtResource("2_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.2, 0.95)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1_theme")

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="LoadingLabel" type="Label" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "LOADING..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 20)
max_value = 100.0
step = 1.0
show_percentage = false

[node name="StatusLabel" type="Label" parent="UI/CenterContainer/VBoxContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Initializing..."
horizontal_alignment = 1